# 6DTeleOp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run.sh
src/: CMakeLists.txt  aruco.cpp  aruco.h  main.cpp
